Fixes issue that came up with home page img being cut off. Also now video plays in Safari.

--- a/client/sass/app.sass
+++ b/client/sass/app.sass
@@ -41,7 +41,7 @@ header
     position: relative
 
     div.slider
-        top: -40%
+        top: -5%
 
     div
         left: 0
